[package]
name = "phonetic"
version = "0.1.2"
edition = "2021"
authors = ["Wouter de Bie <wouter@evenflow.nl>"]
description = "Small tool to help you spell in phonetic alphabets"
license = "MIT"
repository = "https://github.com/wouterdebie/phonetic/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ['derive', 'env'] }
indexmap = "1.8.0"
rust-embed="6.3.0"
substring = "1.4.5"
tabular = "0.2.0"

[[bin]]
name = "phon"
path = "src/bin.rs"

[lib]
name = "phonetic"
path = "src/lib.rs"

[dev-dependencies]
cargo-bump = "1.1.0"
