[package]
name = "salph"
version = "0.3.0"
edition = "2021"
authors = ["Wouter de Bie <wouter@evenflow.nl>"]
description = "Small tool to help you spell in spelling alphabets"
license = "MIT"
repository = "https://github.com/wouterdebie/salph/"

[dependencies]
clap = { version = "3.2.23", features = ['derive', 'env'] }
colored = "2"
indexmap = "1.8.0"
rust-embed="6.3.0"
strum = "0.24"
strum_macros = "0.24"
substring = "1.4.5"
tabular = "0.2.0"

[[bin]]
name = "salph"
path = "src/bin.rs"

[lib]
name = "salph"
path = "src/lib.rs"

[dev-dependencies]
cargo-bump = "1.1.0"

[build-dependencies]
rust-embed="6.3.0"
